--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ button {
     color: black;
     font-family: "Bai Jamjuree", sans-serif;
 }
+
+.passo {
+    display: none;
+}
+
+.passo.ativo{
+    display:block;
+}
